public enum NoteDivision
{
    Quarter,
    Eighth,
    Sixteenth,
}
